aonec-bot/overlays/prod/aonec_bot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aonec-bot
spec:
  template:
    spec:
      containers:
        - name: aonec-bot
          image: aonec-bot_image_name
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.1"
            limits:
              memory: "256Mi"
              cpu: "0.25"
