aonec-bot/overlays/prod/aonec_bot-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aonec-bot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.alb.yc.io/subnets: e9b98k3hqkb4fkcsu7hs
    ingress.alb.yc.io/external-ipv4-address: 51.250.3.196
    ingress.alb.yc.io/group-name: ttm
spec:
  tls:
    - hosts:
        - bot.ttplatform.ru
      secretName: yc-certmgr-cert-id-fpql066f1np15cmp0f4t
  rules:
    - host: bot.ttplatform.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: aonec-bot
                port:
                  number: 80
